--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.14.1",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
+    "esbuild": "^0.25.8",
     "framer-motion": "^6.5.1",
     "icons": "^1.0.0",
     "react": "^18.3.1",
